some basic of angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,8 @@
 
 <!-- <app-toggle></app-toggle> -->
 
+<!-- <app-bootstrap></app-bootstrap> -->
+
 <!-- <app-material-ui></app-material-ui> -->
 
 <!-- <app-todo-list></app-todo-list> -->
@@ -39,4 +41,7 @@
 
 <!-- <app-template-reference-variable></app-template-reference-variable> -->
 
-<app-pipes></app-pipes>
+<!-- <app-pipes></app-pipes> -->
+
+<!-- <app-reactive-form></app-reactive-form> -->
+
